@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -Xms512M -Xmx512M -jar spigot-1.18.2.jar
+java -Xmx2048M -Xmx2048M -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:+ZProactive -XX:ZCollectionInterval=600 -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:+ParallelRefProcEnabled -XX:+PerfDisableSharedMem -jar spigot-1.18.2.jar nogui
